--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="row">
 				<article class="col-4 col-12-xsmall work-item">
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-					<h2>Accenture</h2>
+					<!-- <h2>Accenture</h2> -->
 					<p style="text-align: center">Senior Software Engineer</p>
 				</article>
 				<article class="col-4 col-12-xsmall work-item">
