box shadow added

--- a/index.html
+++ b/index.html
@@ -68,17 +68,38 @@
 			</h1>
 			<div class="row">
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					"></a>
 					<!-- <h2>Accenture</h2> -->
 					<p style="text-align: center">Senior Software Engineer</p>
 				</article>
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					" /></a>
 					<!-- <h2>Aristos Erevna</h2> -->
 					<p style="text-align: center">Software Developer</p>
 				</article>
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					"/></a>
 					<!-- <h2>SynapseIndia</h2> -->
 					<p style="text-align: center">Application Developer</p>
 				</article>
@@ -110,17 +131,38 @@
 			</h1>
 			<div class="row">
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/04.png" class="image fit thumb"><img src="images/thumbs/040.png" alt="" /></a>
+					<a href="images/fulls/04.png" class="image fit thumb"><img src="images/thumbs/040.png" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					" /></a>
 					<h3 style="text-align: center">Swansea University</h3>
 					<p style="text-align: center">MSc Cyber Security</p>
 				</article>
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/050.png" alt="" /></a>
+					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/050.png" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					" /></a>
 					<h3 style="text-align: center">GGSIP University</h3>
 					<p style="text-align: center">Masters in Computer Applications</p>
 				</article>
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/060.png" alt="" /></a>
+					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/060.png" style="
+						background-color: #fff;
+						border-radius: 3px;
+						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
+						color: #333;
+						display: block;
+						padding: 1rem;
+					" /></a>
 					<h3 style="text-align: center">Patna University</h3>
 					<p style="text-align: center">Bachelors in Computer Applications</p>
 				</article>
