CV download button

--- a/index.html
+++ b/index.html
@@ -221,13 +221,19 @@
 							</h3>
 							<a href="#">mr.kishlay@gmail.com</a>
 						</li>
+						
 						<!-- <a href="https://my.flightradar24.com/kishlay_kant"><img src="https://banners-my.flightradar24.com/kishlay_kant.png" alt="My Flightdiary.net profile" /></a> -->
 					</ul>
+					<a href="resume/Kishlay_Resume.pdf" download="Kishlay Resume">	
+						<ul class="icons">
+						<li><input type="submit" value="Download my Resume" /></li>
+						</ul>
+					</a>
 				</div>
 			</div>
 		</section>
-
 		<!-- Four -->
+	
 
 	</div>
 
