Clients Added and cloud adress for cv

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="shortcut icon" href="favicons/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="is-preload">
@@ -33,16 +34,18 @@
 		<!-- One -->
 		<section id="one">
 			<header class="major">
-				<h2>Senior Software Engineer</h2>
+				<h2>Senior Software Engineer/React Native</h2>
 			</header>
 			<p>
-				Senior software engineer with 4 years of experience specializing in
-				React, React Native, and Node.js development. He has created a wide
-				range of applications and websites while working as an engineer,
-				including mobile banking apps for a leading Global Banks. Kishlay
-				works in a clear and organized manner, ensuring that projects are
-				well-planned before he starts programming. He contributes exceptional
-				value as projects progress from start to finish.
+				Senior software engineer with 4+ years of experience specializing in
+				React, React Native, and Node.js development. Created a wide
+				range of mobile applications and websites while working as an developer,
+				including mobile banking apps for leading Global Banks.
+				work in a clear and organized manner, ensuring that projects are
+				well-planned before programming. collaboration with cross-functional teams, and driving
+				execution in agile environments. Maintaining code quality, handling project priorities,
+				and mentoring new team members. Strong mobile UI/UX expertise with version control systems and a keen
+				understanding of technical and business requirements.
 			</p>
 			<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -68,7 +71,7 @@
 			</h1>
 			<div class="row">
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" style="
+					<a href="clients/all_clients.png" class="image fit thumb"><img src="images/thumbs/01.jpg" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
@@ -80,7 +83,7 @@
 					<p style="text-align: center">Senior Software Engineer</p>
 				</article>
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" style="
+					<a href="clients/ae_research.png" class="image fit thumb"><img src="images/thumbs/02.jpg" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
@@ -92,14 +95,14 @@
 					<p style="text-align: center">Software Developer</p>
 				</article>
 				<article class="col-4 col-12-xsmall work-item">
-					<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" style="
+					<a href="clients/intern.png" class="image fit thumb"><img src="images/thumbs/03.jpg" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
 						color: #333;
 						display: block;
 						padding: 1rem;
-					"/></a>
+					" /></a>
 					<!-- <h2>SynapseIndia</h2> -->
 					<p style="text-align: center">Application Developer</p>
 				</article>
@@ -131,7 +134,7 @@
 			</h1>
 			<div class="row">
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/04.png" class="image fit thumb"><img src="images/thumbs/040.png" style="
+					<a href="#" class="image fit thumb"><img src="images/thumbs/040.png" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
@@ -140,10 +143,10 @@
 						padding: 1rem;
 					" /></a>
 					<h3 style="text-align: center">Swansea University</h3>
-					<p style="text-align: center">MSc Cyber Security</p>
+					<p style="text-align: center">Master of Scence in<br/> Cyber Security</p>
 				</article>
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/050.png" style="
+					<a href="#" class="image fit thumb"><img src="images/thumbs/050.png" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
@@ -152,10 +155,10 @@
 						padding: 1rem;
 					" /></a>
 					<h3 style="text-align: center">GGSIP University</h3>
-					<p style="text-align: center">Masters in Computer Applications</p>
+					<p style="text-align: center">Master of Computer Applications</p>
 				</article>
 				<article class="col-3 col-4-xsmall work-item">
-					<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/060.png" style="
+					<a href="#" class="image fit thumb"><img src="images/thumbs/060.png" style="
 						background-color: #fff;
 						border-radius: 3px;
 						box-shadow: 0 1px 3px 0 rgba(0,0,0,.15),0 1px 2px 0 rgba(0,0,0,.15);
@@ -221,19 +224,19 @@
 							</h3>
 							<a href="#">mr.kishlay@gmail.com</a>
 						</li>
-						
+
 						<!-- <a href="https://my.flightradar24.com/kishlay_kant"><img src="https://banners-my.flightradar24.com/kishlay_kant.png" alt="My Flightdiary.net profile" /></a> -->
 					</ul>
-					<a href="resume/Kishlay_Resume.pdf" download="Kishlay Resume">	
+					<a href="https://drive.google.com/file/d/1PV5Du0wPu9dnyV0ZQSnTB3F_aTVP2PS2/view?usp=sharing" download="Kishlay Resume">
 						<ul class="icons">
-						<li><input type="submit" value="Download my Resume" /></li>
+							<li><input type="submit" value="Download my Resume" /></li>
 						</ul>
 					</a>
 				</div>
 			</div>
 		</section>
 		<!-- Four -->
-	
+
 
 	</div>
 
