--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<header class="major">
 				<h2>Senior Software Engineer/React Native</h2>
 			</header>
-			<p>
+			<p style="text-align: justify;">
 				Senior software engineer with 4+ years of experience specializing in
 				React, React Native, and Node.js development. Created a wide
 				range of mobile applications and websites while working as an developer,
