--- a/index.html
+++ b/index.html
@@ -14,27 +14,34 @@
 	<link rel="shortcut icon" href="images/icon.png" type="image/x-icon" />
 	<style>
 		.image-container {
-		  display: flex;
-		  flex-wrap: wrap; /* Allow wrapping on smaller screens */
+			display: flex;
+			flex-wrap: wrap;
+			/* Allow wrapping on smaller screens */
 		}
-		
+
 		.image-block {
-		  margin-right: 1px; /* Adjust spacing between blocks */
-		  margin-bottom: 10px; /* Adjust spacing between rows */
-		  width: 60px; /* Adjust width of each block */
+			margin-right: 1px;
+			/* Adjust spacing between blocks */
+			margin-bottom: 10px;
+			/* Adjust spacing between rows */
+			width: 60px;
+			/* Adjust width of each block */
 		}
-		
+
 		.image-block img {
-		  width:65%; /* Make images fill the block width */
-		  height: auto; /* Maintain aspect ratio */
+			width: 65%;
+			/* Make images fill the block width */
+			height: auto;
+			/* Maintain aspect ratio */
 		}
-	  
+
 		@media screen and (max-width: 600px) {
-		  .image-block {
-			width: calc(33.33% - 10px); /* Adjust block width for smaller screens */
-		  }
+			.image-block {
+				width: calc(33.33% - 10px);
+				/* Adjust block width for smaller screens */
+			}
 		}
-	  </style>
+	</style>
 </head>
 
 <body class="is-preload">
@@ -71,16 +78,16 @@
 				mobile UI/UX expertise with version control systems and a keen
 				understanding of technical and business requirements.
 			</p>
-			
+
 			<div class="image-container">
-				<div class="image-block">	<img src="/images/skills/js.svg" alt="React" /></div>
-				<div class="image-block">	<img src="/images/skills//typescript.png" alt="TypeScript" /></div>		
-				<div class="image-block">	<img src="/images/skills/atomic.svg" alt="Javascript" /></div>
-				<div class="image-block">	<img src="/images/skills/html.png" alt="html" /></div>
-				<div class="image-block">	<img src="/images/skills/native.png" alt="native" /></div>
-				<div class="image-block">	<img src="/images/skills/css.png" alt="css" /></div>	
-				</div>
-			
+				<div class="image-block"> <img src="/images/skills/js.svg" alt="React" /></div>
+				<div class="image-block"> <img src="/images/skills//typescript.png" alt="TypeScript" /></div>
+				<div class="image-block"> <img src="/images/skills/atomic.svg" alt="Javascript" /></div>
+				<div class="image-block"> <img src="/images/skills/html.png" alt="html" /></div>
+				<div class="image-block"> <img src="/images/skills/native.png" alt="native" /></div>
+				<div class="image-block"> <img src="/images/skills/css.png" alt="css" /></div>
+			</div>
+
 		</section>
 
 		<!-- Two -->
