--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 			</p>
 
 			<div class="image-container">
-				<div class="image-block"> <img src="/images/skills/js.svg" alt="React" /></div>
-				<div class="image-block"> <img src="/images/skills//typescript.png" alt="TypeScript" /></div>
-				<div class="image-block"> <img src="/images/skills/atomic.svg" alt="Javascript" /></div>
-				<div class="image-block"> <img src="/images/skills/html.png" alt="html" /></div>
-				<div class="image-block"> <img src="/images/skills/native.png" alt="native" /></div>
-				<div class="image-block"> <img src="/images/skills/css.png" alt="css" /></div>
+				<div class="image-block"> <img src="images/skills/js.svg" alt="React" /></div>
+				<div class="image-block"> <img src="images/skills//typescript.png" alt="TypeScript" /></div>
+				<div class="image-block"> <img src="images/skills/atomic.svg" alt="Javascript" /></div>
+				<div class="image-block"> <img src="images/skills/html.png" alt="html" /></div>
+				<div class="image-block"> <img src="images/skills/native.png" alt="native" /></div>
+				<div class="image-block"> <img src="images/skills/css.png" alt="css" /></div>
 			</div>
 
 		</section>
