--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
 						<input type="hidden" name="access_key" value="79a2539f-491b-4a93-a65c-bc7721108be7" />
 						<div class="row gtr-uniform gtr-50">
 							<div class="col-6 col-12-xsmall">
-								<input type="text" name="name" id="name" placeholder="Name" />
+								<input type="text" name="name" id="name" placeholder="Name" required />
 							</div>
 							<div class="col-6 col-12-xsmall">
-								<input type="email" name="email" id="email" placeholder="Email" />
+								<input type="email" name="email" id="email" placeholder="Email" required/>
 							</div>
 							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Message" rows="4"></textarea>
+								<textarea name="message" id="message" placeholder="Message" rows="4" required></textarea>
 							</div>
 						</div>
 						<ul class="actions">
