--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
 							<h3 class="icon solid fa-home">
 								<span class="label">Address</span>
 							</h3>
-							Swansea<br />
-							West Glamorgan<br />
+							Newport<br />
+							Gwent<br />
 							Wales, United Kingdom
 						</li>
 						<li>
