--- a/index.html
+++ b/index.html
@@ -301,8 +301,9 @@
 						</li>
 						<li>
 							<h3 class="fas fa-file-alt"></h3>
-							<a
-								href="https://drive.google.com/file/d/1PV5Du0wPu9dnyV0ZQSnTB3F_aTVP2PS2/view?usp=sharing">Download
+<!-- 							<a href="https://drive.google.com/file/d/1PV5Du0wPu9dnyV0ZQSnTB3F_aTVP2PS2/view?usp=sharing"> -->
+							<a href="https://1drv.ms/b/c/db8677ad3f1fb6c8/EWr93w8p_4dGqzaWNgWNONABTaI3sGJ8uTeKs8ed27qa6A?e=XeZge2"
+								>Download
 								my Resume</a>
 						</li>
 
